--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,10 @@
 	"env": {
 		"es6": true,
 		"browser": true,
-		"node": true
+		"node": true,
+		"jest": true
+	},
+	"rules":{
+		"linebreak-style": 0
 	}
 }
